Correção das controllers Foto e Publicação

--- a/TechChallange.Api/appsettings.json
+++ b/TechChallange.Api/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-1RSBIR4\\SQLEXPRESS;Initial Catalog=TechAPI;Trusted_Connection=True;MultipleActiveResultSets=True; TrustServerCertificate=True;",
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=DESKTOP-1RSBIR4\\SQLEXPRESS;Initial Catalog=TechAPI;Trusted_Connection=True;MultipleActiveResultSets=True; TrustServerCertificate=True;",
+    //"DefaultConnection": "Data Source=DESKTOP-1RSBIR4\\SQLEXPRESS;Initial Catalog=TechAPI;Trusted_Connection=True;MultipleActiveResultSets=True; TrustServerCertificate=True;",
+    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:server-techchallenge.database.windows.net,1433;Initial Catalog=db-techchallenge;Persist Security Info=False;User ID=techchallenge;Password=@Adm1234; MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "Log_SQL_CONNECTIONSTRING": "Data Source=DESKTOP-1RSBIR4\\SQLEXPRESS;Initial Catalog=TechAPI;Trusted_Connection=True;MultipleActiveResultSets=True; TrustServerCertificate=True;"
   },
   "Serilog": {
